--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
   <body data-page="dashboard" class="min-h-screen bg-slate-950 text-slate-100">
     <main class="mx-auto max-w-7xl px-6 py-8">
       <section id="login" class="mx-auto max-w-md rounded-2xl border border-slate-800 bg-slate-900 p-6 hidden">
-        <h2 class="mb-2 text-xl font-semibold">Sign in</h2><input id="u" placeholder="username" value="admin" class="mb-2 w-full rounded border border-slate-700 bg-slate-950 px-3 py-2" /><input id="p" placeholder="password" type="password" class="mb-2 w-full rounded border border-slate-700 bg-slate-950 px-3 py-2" /><button onclick="login()" class="w-full rounded bg-blue-600 px-3 py-2">Login</button>
+        <h2 class="mb-2 text-xl font-semibold">Sign in</h2><input id="u" placeholder="username" value="admin" class="mb-2 w-full rounded border border-slate-700 bg-slate-950 px-3 py-2" /><input id="p" placeholder="password" type="password" class="mb-2 w-full rounded border border-slate-700 bg-slate-950 px-3 py-2" /><button onclick="login()" class="w-full rounded bg-blue-600 px-3 py-2">Login</button><p id="login-error" class="hidden mt-2 text-sm text-rose-400"></p>
       </section>
       <section id="app-shell" class="hidden">
         <div id="nav-root"></div>
